[package]
name = "interface_rh"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_rs = "0.8.35"
rfd = "0.15.4"
iced = {version = "0.13", features = ["tokio"]}
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
chrono = {version= "0.4.42", features = ["unstable-locales", "serde"], default-features = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
